--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node-dev --transpile-only --ignorewatch node-modules --respawn src/server.ts"
+    "dev": "ts-node-dev --transpile-only --inspect --ignore-watch node-modules --respawn src/server.ts"
   },
   "keywords": [],
   "author": "",
