--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "csv-parse": "^5.3.6",
     "express": "^4.18.2",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/csv-parse": "^1.2.2",
     "@types/express": "^4.17.17",
     "@types/multer": "^1.4.7",
     "@types/uuid": "^9.0.1",
