--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^4.12.0",
     "csv-parse": "^5.3.6",
     "express": "^4.18.2",
     "pg": "^8.10.0",
@@ -30,6 +31,7 @@
     "eslint-import-resolver-typescript": "^3.5.3",
     "eslint-plugin-import": "^2.27.5",
     "multer": "^1.4.5-lts.1",
+    "prisma": "^4.12.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.5"
   }
